--- a/source/index.html
+++ b/source/index.html
@@ -400,10 +400,11 @@
       <div class="screen__wrapper">
         <div class="result result--prize">
           <div class="result__image">
-            <picture>
-              <source srcset="img/result2-mob.png 1x, img/result2-mob@2x.png 2x" media="(max-width: 768px) and (orientation: portrait)">
-              <img src="img/result2.png" srcset="img/result2@2x.png 2x" alt="">
-            </picture>
+            <div class="result__image-part result__image-part_leaf-blue-1"></div>
+            <div class="result__image-part result__image-part_leaf-blue-2"></div>
+            <div class="result__image-part result__image-part_leaf-green"></div>
+            <div class="result__image-part result__image-part_suitcase"></div>
+            <div class="result__image-part result__image-part_flamingo"></div>
           </div>
           <h2 class="result__title">
             <span class="visually-hidden">ПОбеда!</span>
@@ -434,7 +435,9 @@
           <div class="result__form">
             <form action="#" method="post" class="form form--result">
               <label for="email-field2" class="form__label">зарегистрируй результат</label>
-              <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
+              <div class="form__field-wrapper">
+                <input type="email" class="form__field" id="email-field2" placeholder="e-mail для регистации результата и получения приза" required>
+              </div>
               <button class="form__button btn">
                 отправить
                 <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
